--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -11,8 +11,8 @@
                 <div class="row footer-row">
                     <div class="footer-box col-sm-12">
                         <div class="social-links">
-                            <%= link_to image_tag('facebook-white.png', id: 'blah', class: 'footer-img', alt: 'About'), 'https://www.facebook.com/krowdprize' %>
-                            <%= link_to image_tag('twitter-white.png', id: 'blah', class: 'footer-img', alt: 'About'), 'https://twitter.com/Krowdprize' %>
+                            <%= link_to image_tag('facebook-white.png', id: 'blah', class: 'footer-img', alt: 'About'), 'https://www.facebook.com/pages/Toolmash/787116811310216' %>
+                            <%= link_to image_tag('twitter-white.png', id: 'blah', class: 'footer-img', alt: 'About'), 'https://twitter.com/TheToolMash' %>
                         </div>
                     </div>
               
@@ -22,10 +22,10 @@
     </div>
 
                   <div class="email-block">
-                      <p>hello@krowdprize.com</p>
+                      <p>hello@toolmash.com</p>
                   </div>
                   <div class="bottom">
-                      <p>© 2014 Krowdprize</p>
+                      <p>© 2014 Toolmash</p>
                   </div>
 
 
