--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -5,14 +5,11 @@
   <div class="banner-content">
 
 		<div class='logo-image'>
-		<%= image_tag("logo.png", alt: "logo-image", class:'img-responsive logo') %>
+		<div class='text-logo'>Toolmash</div>
 		</div>
 
 		<div class='opening-text'>
-			<span class="opening-text-name">Krowdprize</span> The Platform for Crowdfunded Innovation Competitions
-		</div>
-		<div class="sub-opening-text"> 
-			Incentivizing human progress one competition prize at a time 
+			<span class="opening-text-name">ToolMash</span> Any tool, any time for one simple monthly payment. 
 		</div>
 
 
@@ -26,8 +23,8 @@
 <div class="container-fluid">
 
     <div class="mid-text-container">
-        <h1>We create kick-ass competitions</h1>
-          <p>Competition is the best way to incentivize progress</p>
+        <h1>Is Toolmash for you?</h1>
+          <p>We want to democratize the utilization of high-cost tools and machinery</p>
     </div>
 
 
@@ -38,10 +35,10 @@
                 <%= image_tag('profile.png', id: 'blah', class: 'media-img', alt: 'About') %>
             </div>
             <h2>
-                Community
+                Contractor
             </h2>
             <p>
-                Submit a competition and vote for your favorite ones
+                Are you in the construction business and frequently rent out equipment at exceedingly high rates? Toolmash is for you
             </p>
         </div>
 
@@ -50,10 +47,10 @@
                 <%= image_tag('nudge.png', class: 'media-img', alt: 'About') %>
             </div>
             <h2>
-                Funding
+                Builder
             </h2>
             <p>
-                Crowdfund prize money and get the top competitions up and running  
+                Are you a DYI enthusiast, build/fix things on your spare time & need tools for one-time projects? Toolmash is for you. 
             </p>
         </div>
 
@@ -62,10 +59,10 @@
                 <%= image_tag('getnoticed.png', class: 'media-img', alt: 'About') %>
             </div>
             <h2>
-                Competition
+                Experimenter
             </h2>
             <p>
-                Browse competitions, innovate, and compete for the top prizes
+                Are you someone who likes trying new tools and seeing what you can build with them? Toolmash is for you.
             </p>
         </div>
 
@@ -135,11 +132,6 @@
 
     </div>
 
-    <div class="beta-submissions">
-        <h1>Currently accepting 10 beta submissions for innovation competitions from individuals and companies</h1>
-        <h3>Email us at hello@krowdprize.com to tell us your competition idea and if selected we will feature it on our upcoming launch</h3>
-    </div>
-
 </div>
 
 
@@ -148,7 +140,11 @@
 
 <div class="image-break">
     <div class="mid-text-container">
-        <h1><b>Competitions have proven to be the most effective way to incentivize innovation</b></h1>
+        <h1>
+        <b>You can donate a tool for a 6 month free subscription</b>
+        </br>
+        <b>Best of all you still have access to the tool through our tool repository ordering system</b>
+        </h1>
     </div>
 
 </div>
@@ -162,47 +158,46 @@
 <div class="container-fluid">
 
     <div class="mid-text-container-example">
-        <h1>Innovation competitions can be used for anything!</h1>
-          <h3>Here are some examples:</h3>
+        <h1></h1>
+          <h3>How it works</h3>
     </div>
 
 
     <div class="row">
 
         <div class="example-box col-sm-4">
-            <h1>Food: Napoleonic Wars Prize</h1>
+            <h1>Sign Up</h1>
             </br>
             </br>
             <div class="square animated bounceIn">
-                <span class="glyphicon glyphicon-cutlery"></span>
+                <span class="glyphicon glyphicon-ok-sign"></span>
             </div>
                 </br>
-                <h3>12,000 Fracs reward offered by the Napoleon's government during war.
-                Resulted in the invention of canned food technology still in use today.
+                <h3>Sign up to our monthly subscription service.
                 </h3>
         </div>
 
         <div class="example-box col-sm-4">
-            <h1>Aviation: The Oertig Prize</h1>
+            <h1>Order</h1>
             </br>
             </br>
             <div class="square animated bounceIn">
-                <span class="glyphicon glyphicon-plane"></span>
+                <span class="glyphicon glyphicon-transfer"></span>
             </div>
                 </br>
-                <h3>$25,000 reward ($340,067 as of 2014) offered on May 19, 1919, NYC. Resulted in the first ever cross-atlantic flight.   
+                <h3>Request it through our user interface. Simple search and one click order.   
                 </h3>
         </div>
 
         <div class="example-box col-sm-4">
-            <h1>Computing: Netflix Prize</h1>
+            <h1>Build</h1>
             </br>
             </br>
             <div class="square animated bounceIn">
-                <span class="glyphicon glyphicon-cloud-upload"></span>
+                <span class="glyphicon glyphicon-wrench"></span>
             </div>
                 </br>
-                <h3>$1,000,000 open competition for the best collaborative filtering algorithm. Resulted in one of the most powerful predictive computing algorithms of modern times.  
+                <h3>Have the tool delivered and start building!  
                 </h3>
         </div>
 
