--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <a class="navbar-brand">KrowdPrize<%#= image_tag('KrowdPrizeLogoNew3.jpg') %></a>
+      <a class="navbar-brand">Toolmash<%#= image_tag('KrowdPrizeLogoNew3.jpg') %></a>
     </div>
     
 
