added custom mailchimp signup form

--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -94,12 +94,12 @@
             
                     <div class="form-subscribe">
                        
-                        <form action="http://krowdprize.us8.list-manage.com/subscribe/post" method="POST" role="form">
+                        <form action="http://toolmash.us8.list-manage.com/subscribe/post" method="POST" role="form">
 
                             <div class="form-inputs subscription-box">
 
                                 <input type="hidden" name="u" value="c50dae01481d495cdc2281893">
-                                <input type="hidden" name="id" value="11a0543600">
+                                <input type="hidden" name="id" value="ff3b241ae4">
 
                                 <div class: "form-space">
                                     <div class: "form-group">
