fixed syntax on landing page

--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -185,7 +185,7 @@
                 <span class="glyphicon glyphicon-transfer"></span>
             </div>
                 </br>
-                <h3>Request it through our user interface. Simple search and one click order.   
+                <h3>Request a tool through our user interface. Simple search and one click order.   
                 </h3>
         </div>
 
